setting up initial file structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Goodbye, Cruel World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>ZIG</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<script src="scripts/lib/jquery.min.js"></script>
+		<script src="scripts/main.js"></script>
+		<script src="scripts/views.js"></script>
+		<script src="scripts/widgets.js"></script>
+		<script src="scripts/controllers.js"></script>
+		<script src="scripts/models.js"></script>
+
+
+
+	</head>
+	<body>
+		<h1>ZIG</h1>
+	</body>
+</html>
