--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<script src="scripts/lib/jquery.min.js"></script>
 		<script src="scripts/main.js"></script>
-		<script src="scripts/views.js"></script>
+		<script src="scripts/models/Game.js">></script>
+		<script src="scripts/models/Resources.js">></script>
+		<script src="scripts/models/Neighborhood.js">></script>
+		<script src="scripts/views/DefaultView.js">></script>
+
+
+		<!--<script src="scripts/views.js"></script>
 		<script src="scripts/widgets.js"></script>
 		<script src="scripts/controllers.js"></script>
-		<script src="scripts/models.js"></script>
-
-
-
+		<script src="scripts/models.js"></script>-->
 	</head>
 	<body>
 		<h1>ZIG</h1>
+		<div id="resources"></div>
+		<div id="neighborhood"></div>
+		<div id="region"></div>
 	</body>
 </html>
