--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 		<script src="scripts/models/Game.js">></script>
 		<script src="scripts/models/Resources.js">></script>
 		<script src="scripts/models/Neighborhood.js">></script>
+		<script src="scripts/models/Region.js"></script>
+		<script src="scripts/models/Subregion.js">></script>
 		<script src="scripts/views/DefaultView.js">></script>
-
-
-		<!--<script src="scripts/views.js"></script>
-		<script src="scripts/widgets.js"></script>
-		<script src="scripts/controllers.js"></script>
-		<script src="scripts/models.js"></script>-->
 	</head>
 	<body>
 		<h1>ZIG</h1>
