--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 	</head>
 	<body>
 		<h1>ZIG</h1>
-		<div id="resources"></div>
-		<div id="neighborhood"></div>
-		<div id="region"></div>
+		<div id="body"></div>
 	</body>
 </html>
