--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ZIG</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<script src="scripts/lib/jquery.min.js"></script>
-		<script src="scripts/main.js"></script>
-		<script src="scripts/models/Game.js">></script>
-		<script src="scripts/models/Resources.js">></script>
-		<script src="scripts/models/Neighborhood.js">></script>
-		<script src="scripts/models/Region.js"></script>
-		<script src="scripts/models/Subregion.js">></script>
-		<script src="scripts/views/DefaultView.js">></script>
+		<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>-->
+		<script src="scripts/angular.min.js"></script>
+		<script src="scripts/app.js"></script>
+		<script src="scripts/game/game.js"></script>
+		<script src="scripts/location/location.js"></script>
+		<script src="scripts/location/regionFactory.js"></script>
+		<script src="scripts/location/subregionFactory.js"></script>
+		<script src="scripts/resources/resources.js"></script>
+
 	</head>
-	<body>
-		<h1>ZIG</h1>
-		<div id="body"></div>
+	<body ng-app="zigApp">
+		<div class="container" ng-include src="'views/main.html'"></div>
+
+
+<script type="text/ng-template" id="views/main.html">
+<div id="resourcesPanel" ng-controller="resourcePanelController">
+	<h3>resources</h3>
+	<ul>
+		<li ng-repeat="r in resources">
+			{{r.name}}:{{r.current}}/{{r.max}}
+		</li>
+	</ul>
+</div>
+<div id="locationPanel" ng-controller="locationPanelController">
+	<h3>location</h3>
+	<div ng-show="activeTab == 'neighborhood'">neighborhood</div>
+	<div ng-show="true">
+		<ul>
+			<li ng-repeat="s in region.subregions" >
+				<span>{{s.name}}</span>
+				<div ng-show="s.clickable">
+					<div ng-click='s.launchTask()' style="width:100px;height:10px;border:1px solid black;"><div style="height:100%;background-color:black;" ng-style="{'width': s.percentComplete+'%'}"></div></div>
+				</div>
+				<div ng-show="s.workable">
+					<span> workers: - {{s.workerCount}} +</span>
+				</div>
+				<div ng-show="s.replaceable" >
+					<button ng-repeat="o in s.replacementOptions" ng-click="s.replaceThisWith(o);">{{o.name}}</button>
+				</div>
+				
+			</li>
+		</ul>
+	</div>
+	<div ng-show="activeTab == 'subregion'">subregion</div>
+</div>
+</script>
+
 	</body>
 </html>
