--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>-->
 		<script src="scripts/angular.min.js"></script>
 		<script src="scripts/app.js"></script>
+		<script src="scripts/logger/logger.js"></script>
 		<script src="scripts/game/game.js"></script>
 		<script src="scripts/location/location.js"></script>
 		<script src="scripts/location/region/regionFactory.js"></script>
