--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>-->
 		<script src="scripts/angular.min.js"></script>
 		<script src="scripts/app.js"></script>
-		<script src="scripts/logger/logger.js"></script>
+		<script src="scripts/logger/loggerService.js"></script>
+		<script src="scripts/status/statusService.js"></script>
 		<script src="scripts/game/game.js"></script>
 		<script src="scripts/location/location.js"></script>
 		<script src="scripts/location/region/regionFactory.js"></script>
 		<script src="scripts/location/subregion/subregionFactory.js"></script>
 		<script src="scripts/resources/resources.js"></script>
+		<script src="scripts/resources/moraleService.js"></script>
+		<script src="scripts/resources/survivorService.js"></script>
 		<script src="views/statusBar/statusBar.js"></script>
 
 	</head>
