horde attack meter

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="scripts/location/subregion/subregionFactory.js"></script>
 		<script src="scripts/resources/resources.js"></script>
 		<script src="scripts/resources/survivorService.js"></script>
+		<script src="scripts/resources/hordeService.js"></script>
 		<script src="views/directives/statusBar.js"></script>
 		<script src="views/directives/tooltip.js"></script>
 
