--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 		<script src="game/game.js"></script>
 		<script src="resources/resources.js"></script>
 		<script src="locations/locations.js"></script>
+		<script src="survivors/survivors.js"></script>
+		<script src="horde/horde.js"></script>
 		<script src="jobs/jobs.js"></script>
-
+		<script src="info/info.js"></script>
 	</head>
 	<body ng-app="zigApp">
 		<div class="container" ng-include src="'game/main.html'" ng-controller="gameController"></div>
