--- a/info/info.html
+++ b/info/info.html
@@ -1,4 +1,4 @@
-<div ng-controller="infoPanelController">
+<div id="infoPanel" ng-controller="infoPanelController">
 	<h3>info</h3>
 	{{message.content}}
 </div>
