--- a/locations/hq.html
+++ b/locations/hq.html
@@ -1,1 +1,16 @@
-hq.html
+<table>
+	<tr ng-repeat="row in subregions">
+		<td ng-repeat="s in row">
+			<div ng-hide="s.state == 'Locked'" class="location" zg-droppable drop="handleDrop" id="subregion-{{$parent.$index}}-{{$index}}">
+				{{s.name}} {{s.level}} ({{s.state}}):
+				<br>
+				<button ng-click='s.removeWorker()'>-</button>{{s.currentWorkers}}/{{s.workerMax}}<button ng-click='s.addWorker();'>+</button>
+				<br>
+				Progress:{{s.progress}}/{{s.progressNeeded}}
+				<br>
+				<div class="worker" ng-show="s.currentWorkers > 0" zg-draggable id="subregion-{{$parent.$index}}-{{$index}}-worker"></div>
+
+			</div>
+		</td>
+	</tr>
+</table>
