--- a/resources/resources.html
+++ b/resources/resources.html
@@ -1,4 +1,4 @@
-<div ng-controller="resourcePanelController">
+<div id="resourcePanel" ng-controller="resourcePanelController">
 	<h3>resources</h3>
 	<ul>
 		<li ng-repeat="r in resources" zg-resource="r" tooltip="{{r.tooltip}}"></li>
