--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<script src="game/game.js"></script>
 		<script src="resources/resources.js"></script>
 		<script src="locations/locations.js"></script>
+		<script src="locations/regions.js"></script>
+		<script src="locations/subregions.js"></script>
 		<script src="survivors/survivors.js"></script>
 		<script src="horde/horde.js"></script>
 		<script src="jobs/jobs.js"></script>
