--- a/locations/neighborhood.html
+++ b/locations/neighborhood.html
@@ -1,12 +1,14 @@
 <table>
 	<tr ng-repeat="row in regions">
-		<td ng-repeat="r in row">
-			<div ng-hide="r.state == 'Locked'" class="location">
+		<td ng-repeat="r in row" >
+			<div ng-hide="r.state == 'Locked'" class="location" zg-droppable drop="handleDrop" id="region-{{$parent.$index}}-{{$index}}">
 				{{r.name}} ({{r.state}}):
 				<br>
-				<button ng-click='r.removeWorker()'>-</button>{{r.currentWorkers}}<button ng-click='r.addWorker();'>+</button>
+				<button ng-click='r.removeWorker()'>-</button>{{r.currentWorkers}}/{{r.workerMax}}<button ng-click='r.addWorker();'>+</button>
 				<br>
 				Progress:{{r.progress}}/{{r.progressNeeded}}
+				<br>
+				<div class="worker" ng-show="r.currentWorkers > 0" zg-draggable id="region-{{$parent.$index}}-{{$index}}-worker"></div>
 			</div>
 		</td>
 	</tr>
