--- a/game/main.html
+++ b/game/main.html
@@ -1,7 +1,7 @@
 <div ng-include src="'game/adminPanel.html'" ></div>
 <div ng-include src="'info/popup.html'"></div>
 
-<div style="left:100px; right:100px; position:absolute;">
+<div id="content">
 	<div ng-include src="'resources/resources.html'" ></div>
 	<div ng-include src="'horde/horde.html'" ></div>
 	<div ng-include src="'survivors/survivors.html'"></div>
