--- a/resources/resources.html
+++ b/resources/resources.html
@@ -1,5 +1,4 @@
-<div id="resourcePanel" ng-controller="resourcePanelController">
-	<h3>resources</h3>
+<div class="wide-info-panel" id="resourcePanel" ng-controller="resourcePanelController">
 	<ul>
 		<li ng-repeat="r in resources" zg-resource="r" tooltip="{{r.tooltip}}"></li>
 	</ul>
