progress bars and splitting macro/micro ticks

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="horde/horde.js"></script>
 		<script src="jobs/jobs.js"></script>
 		<script src="info/info.js"></script>
+		<script src="views/directives/statusBar.js"></script>
 	</head>
 	<body ng-app="zigApp">
 		<div class="container" ng-include src="'game/main.html'" ng-controller="gameController"></div>
