--- a/resources/resource.html
+++ b/resources/resource.html
@@ -1,2 +1,2 @@
 {{r.name}}:{{r.current}}/{{r.max}}
-<!--<div zg-status-bar percent-full="r.percentFull"></div>-->
+<div zg-status-bar percent-full="r.percentFull" style="position:relative;width:200px;height:25px;"></div>
