--- a/info/popup.html
+++ b/info/popup.html
@@ -1,9 +1,9 @@
 <div ng-controller="popUpController">
 	<div ng-show="popUp.visible">
-		<div style="position:absolute;left:0;top:0;height:auto;min-height:100%;min-width:100%;background-color:gray;opacity:.75"></div>
-		<div style="z-index:9001;border:1px solid black;background-color:white;position:absolute;width:400px;height:400px;left:50%;top:50%;margin-left:-200px;margin-top:-200px;padding:5px;">
-			{{popUp.content}}
-			<button ng-click="closePopUp();">close</button>
+		<div class="popup-overlay"></div>
+		<div class="popup-box">
+			<div>{{popUp.content}}</div>
+			<div><button ng-click="closePopUp();">close</button></div>
 		</div>
 	</div>
 </div>
