--- a/game/adminPanel.html
+++ b/game/adminPanel.html
@@ -2,4 +2,6 @@
 <div ng-controller="gameController">
 	<button ng-click="newGame();">new game</button>
 	<button ng-click="popUp();">test pop up</button>
+	<button ng-click="newSurvivor();">new survivor</button>
+	<button ng-click="maxResources();">max resources</button>
 </div>
