scaling morale penalties, first-pass icons

--- a/locations/neighborhood.html
+++ b/locations/neighborhood.html
@@ -8,7 +8,7 @@
 				<br>
 				<div zg-status-bar percent-full="r.percentProgress"></div>
 				<br>
-				<div class="worker" ng-show="r.currentWorkers > 0" zg-draggable id="region-{{$parent.$index}}-{{$index}}-worker"></div>
+				<div class="worker location-worker" ng-show="r.currentWorkers > 0" zg-draggable id="region-{{$parent.$index}}-{{$index}}-worker"></div>
 			</div>
 		</td>
 	</tr>
