adding new UI design elements to views dir

--- a/game/main.html
+++ b/game/main.html
@@ -1,10 +1,19 @@
-<div ng-include src="'game/adminPanel.html'" ></div>
+<!--<div ng-include src="'game/adminPanel.html'" ></div>-->
 <div ng-include src="'info/popup.html'"></div>
 
 <div id="content">
-	<div ng-include src="'resources/resources.html'" ></div>
+	<div ng-include src="'views/incomingAttack.html'"></div>
+	<div ng-include src="'views/resources.html'"></div>
+	<div ng-include src="'views/morale.html'"></div>
+	<div ng-include src="'views/survivors.html'"></div>
+	<div ng-include src="'views/threat.html'"></div>
+	<div ng-include src="'views/locations.html'"></div>
+
+
+
+	<!--<div ng-include src="'resources/resources.html'" ></div>
 	<div ng-include src="'horde/horde.html'" ></div>
 	<div ng-include src="'survivors/survivors.html'"></div>
 	<div ng-include src="'locations/locations.html'" ></div>
-	<div ng-include src="'info/info.html'" ></div>
+	<div ng-include src="'info/info.html'" ></div>-->
 <div>
