--- a/game/main.html
+++ b/game/main.html
@@ -1,4 +1,6 @@
-<!--<div ng-include src="'game/adminPanel.html'" ></div>-->
+<!--
+<div ng-include src="'game/adminPanel.html'" ></div>
+-->
 <div ng-include src="'info/popup.html'"></div>
 
 <div id="content">
