--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles/css.css">
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 		<script src="angular.min.js"></script>
 		<script src="app.js"></script>
 		<script src="game/game.js"></script>
