status bar logic, resource css

--- a/game/adminPanel.html
+++ b/game/adminPanel.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="gameController">
+<div ng-controller="gameController" id="panel-admin" class="panel">
 	<button ng-click="newGame();">new game</button>
 	<button ng-click="popUp();">test pop up</button>
 	<button ng-click="newSurvivor();">new survivor</button>
