more ui updates

--- a/game/main.html
+++ b/game/main.html
@@ -9,4 +9,5 @@
 	<div ng-include src="'views/survivors.html'"></div>
 	<div ng-include src="'views/threat.html'"></div>
 	<div ng-include src="'views/locations.html'"></div>
+	<div ng-include src="'views/info.html'"></div>
 <div>
