--- a/game/adminPanel.html
+++ b/game/adminPanel.html
@@ -4,4 +4,6 @@
 	<button ng-click="popUp();">test pop up</button>
 	<button ng-click="newSurvivor();">new survivor</button>
 	<button ng-click="maxResources();">max resources</button>
+	<button ng-click="unlockAllFeatures();">unlock panels</button>
+
 </div>
