change per second listed in resources, zed/survivor counts shift with threat/morale

--- a/resources/resource.html
+++ b/resources/resource.html
@@ -3,7 +3,7 @@
 	<div class="resource-info">
 		<div class="resource-info-table">
 			<div class="resource-info-counter">{{r.current}}/{{r.max}}</div>
-			<div class="resource-info-delta">+1 p/s</div>
+			<div class="resource-info-delta">{{r.totalChangePerSecond}} p/s</div>
 		</div>
 	</div>
 </div>
